# rustc_codegen_sci

./: .gitignore  .patrol_heartbeat  Cargo.toml  README.md  current_plan.md  progress.md  tasks.md
crates/rustc_codegen_sci/: Cargo.toml
crates/rustc_codegen_sci/src/: lib.rs
crates/sci_codegen_worker/: Cargo.toml
crates/sci_codegen_worker/src/: main.rs
crates/sci_protocol/: Cargo.toml
crates/sci_protocol/src/: lib.rs
docs/: architecture.md  implementation_plan_cn.md  status.md
scripts/: build.sh  env.sh  test.sh
tests/: smoke.sh
tests/fixtures/: abi_cast.rs  abi_cast_harness.c  abi_direct.rs  abi_direct_harness.c  abi_indirect.rs  abi_pair.rs  abi_pair_harness.c  add.rs  add_harness.c  unsupported_ref.rs
